--- a/instApp/templates/base.html
+++ b/instApp/templates/base.html
@@ -1,15 +1,29 @@
+{{% load static %}}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{% static 'css/instacss'%}" >
 </head>
 <body>
     <header>
         <div class="navigation">
             <div class="instagram">
                 <a class="" href="/"><i class="fa fa-instagram"></i></a>
+                <a class="v2" href="/"></a>
+                <a href="/">Instagram</a>
+            </div>
+            <div class="search-bar">
+                <input type="text" placeholder="serach">
+                <a class="search" href=""><i class="fa fa-search"></i></a>
+            </div>
+            <div class="contact_icons">
+                <a class="explore"><i class="fa fa-compass"></i></a>
+                <a class="likes"><i class="fa fa-heart"></i></a>
+                <a class="profile"><i class="fa fa-user"></i></a>
             </div>
         </div>
     </header>
