--- a/instApp/templates/post_list.html
+++ b/instApp/templates/post_list.html
@@ -1,4 +1,8 @@
-{% for post in posts%}
-<p>{{post.author}}</p>
-<p>{{post.caption}}</p>
-{% endfor %}
+{% extends 'base.html' %}
+
+{% block content %}
+   {% for post in posts%}
+   <p>{{post.author}}</p>
+   <p>{{post.caption}}</p>
+   {% endfor %}
+{% endblock%}
