--- a/instApp/templates/base.html
+++ b/instApp/templates/base.html
@@ -1,4 +1,5 @@
-{{% load static %}}
+{% load static %}
+{% load bootstrap4%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,24 +7,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="{% static 'css/instacss'%}" >
+    <link rel="stylesheet" href="{% static 'css/insta.css'%}" >
+
 </head>
 <body>
     <header>
         <div class="navigation">
-            <div class="instagram">
+            <div class="instagram-logo">
                 <a class="" href="/"><i class="fa fa-instagram"></i></a>
-                <a class="v2" href="/"></a>
+                <a class="vl" href="/"></a>
                 <a href="/">Instagram</a>
             </div>
             <div class="search-bar">
-                <input type="text" placeholder="serach">
+                <input type="text" placeholder="search">
                 <a class="search" href=""><i class="fa fa-search"></i></a>
             </div>
+            
             <div class="contact_icons">
-                <a class="explore"><i class="fa fa-compass"></i></a>
+                <div class="row">
+                    <div class="col-md-3">
+                <a class="home"><i class="fa fa-home"></i></a>
+                </div>
+                <div class="col-md-3">
+               <a class="explore"><i class="fa fa-compass"></i></a>
+                </div>
+                <div class="col-md-3">
                 <a class="likes"><i class="fa fa-heart"></i></a>
+                </div>
+                <div class="col-md-3">
                 <a class="profile"><i class="fa fa-user"></i></a>
+                </div>
+                </div>
             </div>
         </div>
     </header>
