--- a/instApp/static/css/insta.css
+++ b/instApp/static/css/insta.css
@@ -21,30 +21,47 @@ header{
     color:#111;
 
 }
-.instagram-logo{
+.instagram{
     display:flex;
     flex-direction:row;
     justify-content:flex-start;
     width:30%;
+    font-size:20px;
+    
 }
-.instagram-logo a{
-    font-size:25px;
-    padding-left:10px;
 
-}
-.vl{
-    border-left:1.5px solid #111;
-    height:35px;
-    margin-left:25px;
-}
 .contact_icons{
     display:flex;
     justify-content: flex-end;
     width:30%;
     padding-left:100px;
 }
-.contact_icons{
+.contact_icons a{
     padding-left: 30px;
     font-size: 25px;
-    font-weight: lighter;
+    color: lighter;
+   
+    
+}
+.search-bar{
+    display:flex;
+    width:30%;
+    justify-content:center;
+    border-radius:3px;
+    color:#999;
+    cursor:text;
+    text-align:center;
+    position:absolute;
+}
+.search-bar a{
+    font-size:25px;
+    padding-left:15px;
+}
+.content-container{
+    background-color:#FAFAFA;
+    padding-top: 50px;
+    position: absolute;
+    width: 100%;
+    top: 100px; 
+    left: 0px;
 }
