--- a/instApp/templates/base.html
+++ b/instApp/templates/base.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% load bootstrap4%}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,10 +13,8 @@
 <body>
     <header>
         <div class="navigation">
-            <div class="instagram-logo">
-                <a class="" href="/"><i class="fa fa-instagram"></i></a>
-                <a class="vl" href="/"></a>
-                <a href="/">Instagram</a>
+            <div class="instagram">
+            <a href="/">Instagram</a>
             </div>
             <div class="search-bar">
                 <input type="text" placeholder="search">
@@ -24,23 +22,17 @@
             </div>
             
             <div class="contact_icons">
-                <div class="row">
-                    <div class="col-md-3">
                 <a class="home"><i class="fa fa-home"></i></a>
-                </div>
-                <div class="col-md-3">
-               <a class="explore"><i class="fa fa-compass"></i></a>
-                </div>
-                <div class="col-md-3">
+                <a class="explore"><i class="fa fa-compass"></i></a>
                 <a class="likes"><i class="fa fa-heart"></i></a>
-                </div>
-                <div class="col-md-3">
                 <a class="profile"><i class="fa fa-user"></i></a>
-                </div>
-                </div>
             </div>
         </div>
     </header>
+    <div class="content-container">
+        {% block content%}
+        {% endblock %}
+    </div>
     
 </body>
 </html>
