--- a/instApp/templates/post_list.html
+++ b/instApp/templates/post_list.html
@@ -2,7 +2,20 @@
 
 {% block content %}
    {% for post in posts%}
-   <p>{{post.author}}</p>
-   <p>{{post.caption}}</p>
+   <div class='card'>
+       <div class="card-header">
+           <div class="profile-image">
+
+           </div>
+           <div class="post-info">
+               <div class="post-name">{{post.author}}</div>
+               <div class="post-location"></div>
+           </div>
+
+       </div>
+
+   </div>
+   <!-- <p>{{post.author}}</p>
+   <p>{{post.caption}}</p> -->
    {% endfor %}
 {% endblock%}
