added a new folder

--- a/instApp/templates/post_list.html
+++ b/instApp/templates/post_list.html
@@ -8,8 +8,12 @@
 
            </div>
            <div class="post-info">
-               <div class="post-name">{{post.author}}</div>
+               <div class="post-name">{{ post.author }}</div>
                <div class="post-location"></div>
+           </div>
+           <div class="post-options"><i class="fa fa-ellipsis-h"></i></div>
+           <div class="post-image">
+               <img src=".images/"
            </div>
 
        </div>
