added more changes in the file

--- a/instApp/templates/base.html
+++ b/instApp/templates/base.html
@@ -24,8 +24,8 @@
             <div class="contact_icons">
                 <a class="home"><i class="fa fa-home"></i></a>
                 <a class="explore"><i class="fa fa-compass"></i></a>
-                <a class="likes"><i class="fa fa-heart"></i></a>
-                <a class="profile"><i class="fa fa-user"></i></a>
+                <a class="likes"><i class="fa fa-heart-o"></i></a>
+                <a class="profile"><i class="fa fa-user-o"></i></a>
             </div>
         </div>
     </header>
