--- a/instApp/static/css/insta.css
+++ b/instApp/static/css/insta.css
@@ -68,4 +68,116 @@ header{
 .card{
     background-color: white;
     margin: 0 auto;
+    width:614px;
+    height:auto;
+    border:0.8px solid #ccc;
+    border-radius:4px; 
+    margin-bottom:60px;
+}
+.card-header{
+    padding: 10px;
+
+}
+.card-header a{
+    text-decoration: none;
+    color:black;
+}
+.profile-image{
+    display:inline-block;
+    background-color:navy;
+    height: 30px;
+    width: 30px;
+    padding: 0;
+    margin: 0;
+    border: 0 solid #0000;
+    border-radius: 50%;
+
+
+}
+.post-info{
+    display:inline-block;
+    padding-left: 15px;
+
+}
+.post-name{
+    font-size: 14px;
+    color:#111;
+    font-weight:600px ;
+    padding:0;
+    margin:0;
+}
+.post-location{
+    font-size: 12px;
+    color:grey;
+    padding: 0;
+    margin: 0;
+}
+.post-options{
+    font-size: 15px;
+    float: right;
+    display:inline-block;
+    margin: 4px;
+    padding: 5px;
+    color:black;
+}
+.post-image{
+    width: 100%;
+    height: 614px;
+
+}
+.engagement{
+    display: inline-block;
+    width: 100%;
+    margin: 0px 0px 0px;
+    padding: 0px 16px;
+}
+.engagement a{
+    padding: 7px;
+    font-size: 25px;
+    color:slategrey;
+    font-weight: 600px;
+
+}
+.fa-bookmark-o{
+    float:right;
+    margin-right: 25px;
+}
+.likes a{
+    text-decoration: none;
+    font-size: 15px;
+    font-weight: 500px;
+    color:black;
+    margin: 0px 0px 8px;
+    padding: 0px 21px;
+
+}
+.caption{
+    display: inline-block;
+    width: 100%;
+    padding: 0px 16px;
+}
+.caption a{
+    font-size: 10px;
+    font-weight:bold;
+    color: black;
+    text-decoration: none;
+    display: inline-block;
+    padding-left: 5px;
+    margin-left: 5px;
+    padding-right: 5px;
+
+}
+.caption span{
+    font-size: 15px;
+    font-weight: 500;
+    color: #111;
+    display: inline-block;
+    margin-right: 15px;
+}
+.time-posted{
+    font-size: 10px;
+    font-weight: 300;
+    color: #111;
+    padding: 0px 16px;
+    text-transform: uppercase;
 }
