--- a/instApp/templates/post_list.html
+++ b/instApp/templates/post_list.html
@@ -15,7 +15,9 @@
            </div>
            <div class="post-options"><i class="fa fa-ellipsis-h"></i></div>
         </div>
-           <div class="post-image"></div>
+           <div class="post-image">
+               <img src="{{ post.Image.url }}">
+           </div>
            <div class="engagement">
                <a href=""><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                <a href=""><i class="fa fa-comment-o" aria-hidden="true"></i></a>
