added more changes in the file

--- a/instApp/templates/post_list.html
+++ b/instApp/templates/post_list.html
@@ -16,7 +16,9 @@
            <div class="post-options"><i class="fa fa-ellipsis-h"></i></div>
         </div>
            <div class="post-image">
+            {% if post.Image %}
                <img src="{{ post.Image.url }}">
+            {% endif %}
            </div>
            <div class="engagement">
                <a href=""><i class="fa fa-heart-o" aria-hidden="true"></i></a>
