--- a/instApp/templates/post_create.html
+++ b/instApp/templates/post_create.html
@@ -2,11 +2,13 @@
 (% load crispy_forms_tags %)
 
 (% blockcontent%)
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <div class="panel panel-default" style=" width:500px; margin:auto;">
-       <div class="panel body">
-           (% load crispy_form %)
+       <div class="panel-body">
+           (%  crispy form %)
            (% csrf_token %)
+           
 
        </div>
     </div>
